--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <ul>
+  <!--TODO poner auth="admin" en li -->
   <!--<li><a routerLink='/'>Pizzas</a></li>-->
   <li ><a routerLink='/ingredients'>Ingredientes</a></li>
- <li ><a routerLink='/login'>Login</a></li>
-<!--  <li ><a routerLink='/register'>Registrarse</a></li>-->
+ <!--<li ><a routerLink='/login'>Login</a></li>-->
+ <li ><a routerLink='/register'>Registrarse</a></li>
 </ul>
 
 
