fixed login as independent app and dependent app

--- a/projects/login/src/app/login.component.html
+++ b/projects/login/src/app/login.component.html
@@ -4,5 +4,6 @@
     <button type="submit" [disabled]="!form.dirty">Enviar</button>
 </form>
 <a routerLink="/register">Registrarse</a>
+<router-outlet name='loginapp'></router-outlet>
 
 <!-- <input rule="emaillogin" /> -->
