--- a/projects/pizzas/src/app/index/pizzaslist/pizzaslist.component.html
+++ b/projects/pizzas/src/app/index/pizzaslist/pizzaslist.component.html
@@ -1,7 +1,6 @@
 <p >Lista de pizzas</p>
 <br/>
-<ul>
-    <li auth="admin"><a routerLink="/add">Añadir pizza</a></li>
-    <li auth="admin"><a routerLink="/edit/111">Editar pizza</a></li>
-
+<ul auth="admin">
+    <li><a routerLink="/pizzas/add">Añadir pizza</a></li>
+    <li ><a routerLink="/pizzas/edit/111">Editar pizza</a></li>
 </ul>
